- implemented review and restaurants controllers - designed users and comments controllers - database tweaks - express tweaks
